# TexPaste

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.default.json  pyproject.toml  requirements-dev.txt  requirements.txt  texpaste.spec
.claude/: settings.local.json
docs/: architecture.md  dev-spec.md  prd.md
docs/superpowers/plans/: 2026-04-02-ui-improvements.md
installer/: setup.iss
scripts/: build.py  build_installer.py  release.py
src/: main.py
src/app/: controller.py  history_ui.py  hotkey_recorder.py  screenshot_overlay.py  settings_ui.py  tray.py
src/core/: clipboard.py  hotkey.py  recognizer.py  screenshot.py  word_paste.py
src/models/: enums.py  history.py
src/resources/prompts/: pure_latex.txt  pure_markdown.txt  pure_text.txt  recognize.txt
src/utils/: config.py  db.py  logger.py  startup.py  updater.py
tests/unit/: test_api_connection.py  test_config.py  test_content_type.py  test_history.py  test_hotkey_recorder.py  test_models.py  test_recognizer.py  test_word_paste.py
