[project]
name = "texpaste"
version = "1.0.0"
description = "Windows desktop tool for OCR formula recognition and smart paste into Word/WPS"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
    "requires_api: marks tests that need a valid API key",
    "requires_word: marks tests that need Word/WPS installed",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]
